[CSS] fix : modal z-index

--- a/css/digiriskdolibarr.css
+++ b/css/digiriskdolibarr.css
@@ -679,7 +679,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1002;
+  z-index: 1000;
   background: rgba(39, 42, 53, 0.9);
   opacity: 0;
   pointer-events: none;
@@ -690,6 +690,7 @@
 .wpeo-modal.modal-active {
   opacity: 1;
   pointer-events: auto;
+  z-index: 1002;
 }
 
 .wpeo-modal.modal-active .modal-container {
