--- a/css/scss/module/modal/_modal.scss
+++ b/css/scss/module/modal/_modal.scss
@@ -13,7 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1002;
+  z-index: 1000;
   background: rgba(39,42,53,.9);
   opacity: 0;
   pointer-events: none;
@@ -22,6 +22,8 @@
   &.modal-active {
     opacity: 1;
     pointer-events: auto;
+    z-index: 1002;
+
     .modal-container {
       transform: translate(-50%, -50%);
     }
